tests/files/type_checker_tests/should_fail/008.cmdr
//Should fail trying to do a ternary expression with non matching types
x = true ? "PASS" : false;